--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
     "start": "node server.js"
   },
   "author": "Alex Curran",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/css": "^0.7.0",
+    "@eslint/js": "^9.26.0",
+    "@eslint/json": "^0.12.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0"
+  }
 }
