Disable React linting for now

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "",
+    "lint": "npx eslint .",
     "start": "node server.js"
   },
   "author": "Alex Curran",
