--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.26.0",
     "@eslint/json": "^0.12.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.1.0"
