--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "",
     "lint": "npx eslint .",
-    "start": "node server.js"
+    "start": "node --env-file=.env server.js",
+    "dev": "node --watch --env-file=.env server.js"
   },
   "author": "Alex Curran",
   "license": "ISC",
