Update test script for server

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "",
+    "test": "node --test",
     "lint": "npx eslint .",
     "start": "node --env-file=.env server.js",
-    "dev": "node --watch --env-file=.env server.js"
+    "dev": "node --watch --env-file=.env server.js",
   },
   "author": "Alex Curran",
   "license": "ISC",
