--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node --test",
     "lint": "npx eslint .",
     "start": "node --env-file=.env server.js",
-    "dev": "node --watch --env-file=.env server.js",
+    "dev": "node --watch --env-file=.env server.js"
   },
   "author": "Alex Curran",
   "license": "ISC",
@@ -18,7 +18,8 @@
     "@stylistic/eslint-plugin": "^4.2.0",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.1.0"
+    "globals": "^16.1.0",
+    "morgan": "^1.10.0"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
